--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "file-saver": "^2.0.5",
+    "html2canvas-proxy": "^1.0.1"
   }
 }
